# Multi-Tenant-REST-API-FastAPI-

./: .gitignore  README.md
bookstore-api/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
bookstore-api/alembic/: env.py
bookstore-api/alembic/versions/: 001_initial_schema.py
bookstore-api/app/: config.py  database.py  main.py
bookstore-api/app/dependencies/: auth.py
bookstore-api/app/exceptions/: handlers.py
bookstore-api/app/middleware/: rate_limit.py  tenant.py
bookstore-api/app/models/: author.py  base.py  book.py  category.py  tenant.py
bookstore-api/app/repositories/: author.py  base.py  book.py  category.py  tenant.py
bookstore-api/app/routers/: admin.py  authors.py  books.py  categories.py  health.py  tenant_mgmt.py
bookstore-api/app/schemas/: author.py  book.py  category.py  common.py  tenant.py
bookstore-api/app/services/: author.py  book.py  category.py  tenant.py
bookstore-api/tests/: conftest.py  test_admin.py  test_books.py  test_rate_limiting.py  test_tenant_isolation.py  test_tenant_lifecycle.py
